--- a/src/components/SubTitle/SubTitle.css
+++ b/src/components/SubTitle/SubTitle.css
@@ -1,6 +1,5 @@
 .SubTitle {
-  /* width: 100%; */
-  margin: 0 16px 24px;
+  margin: 0;
   font-style: normal;
   font-weight: 600;
   font-size: 22x;
