--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,6 +1,5 @@
 .Title {
-  /* width: 100%; */
-  margin: 108px 16px 40px;
+  margin: 108px 0 40px;
   font-style: normal;
   font-weight: 500;
   font-size: 40px;
