--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,9 @@
 .App {
   min-height: 100vh;
-  width: 100%;
+  /* width: 100%; */
+  width: calc(100% * 343 / 375);
   display: flex;
+  margin: 0 16px;
   /* align-items: center; */
   flex-direction: column;
   -webkit-font-smoothing: antialiased;
