--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,24 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.Title {
+  margin: 108px 0 40px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 38px;
+}
+
+.SubmitButton {
+  background: #E8E8E8;
+  border: 1px solid #D9D9D9;
+  border-radius: 2px;
+  margin: 0 0 82px;
+  height: 40px;
+  color: #BCBCBC;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
