--- a/src/features/addFileBtn/AddFileBtn.css
+++ b/src/features/addFileBtn/AddFileBtn.css
@@ -15,7 +15,6 @@
   height: 42px;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
 }
 
 .AddFileBtn__image {
@@ -41,11 +40,16 @@
   margin: 0 0 0 10px;
 }
 
+.AddFileBtn__file-name_error {
+  color: #F5222D;
+}
+
 .AddFileBtn__added-file {
   margin: 24px 0 0;
   display: flex;
   width: 100%;
   justify-content: space-between;
+  position: relative;
 }
 
 .AddFileBtn__container {
@@ -54,6 +58,10 @@
 
 .AddFileBtn__added-file:hover {
   background: #E6F7FF;
+}
+
+.AddFileBtn__added-file.AddFileBtn__added-file_error:hover {
+  background: none;
 }
 
 .AddFileBtn__add-logo {
@@ -69,5 +77,20 @@
 }
 
 .AddFileBtn__delete-file.AddFileBtn__delete-file_hidden {
+  display: none;
+}
+
+.AddFileBtn__error-text {
+  position: absolute;
+  left: 0;
+  bottom: -30px;
+  color: #F5222D;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.AddFileBtn__error-text.AddFileBtn__error-text_hidden {
   display: none;
 }
