--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+.Main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .App {
   min-height: 100vh;
-  /* width: 100%; */
   width: calc(100% * 343 / 375);
   display: flex;
   margin: 0 16px;
-  /* align-items: center; */
   flex-direction: column;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -39,4 +44,26 @@
   background: #1890FF;
   border: 1px solid #1890FF;
   color: #FFFFFF;
+}
+
+@media screen and (min-width: 376px) {
+  .App {
+    width: calc(100% * 928 / 1440);
+    margin: 0;
+  }
+
+  .Title {
+    font-weight: 600;
+    margin: 120px 0 48px;
+  }
+
+  .PersonalData {
+    display: grid;
+    grid-template-columns: repeat(2, 256px);
+    grid-row-gap: 48px;
+    margin: 24px 0 48px;
+    /* grid-column-gap: calc(100% * 256 / 928); */
+    grid-column-gap: 80px;
+    /* width: calc(100% * 256 / 928); */
+  }
 }
