--- a/src/commonComponents/PopupBtn/PopupBtn.css
+++ b/src/commonComponents/PopupBtn/PopupBtn.css
@@ -15,3 +15,13 @@
 .PopupBtn.PopupBtn_privacy {
   margin: 0 0 12px;
 }
+
+@media screen and (min-width: 376px) {
+  .PopupBtn.PopupBtn_privacy {
+    margin: 48px 0 40px;
+  }
+
+  .PopupBtn {
+    margin: 0 0 40px;
+  }
+}
